@@ -25,8 +25,13 @@ then
   mvn -B clean package
 fi
 
+echo "purge ruby petstore lib, docs, spec folder"
+rm -Rf samples/client/petstore/ruby/lib
+rm -Rf samples/client/petstore/ruby/docs
+rm -Rf samples/client/petstore/ruby/spec
+
 # if you've executed sbt assembly previously it will use that instead.
-export JAVA_OPTS="${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties"
+export JAVA_OPTS="${JAVA_OPTS} -Xmx1024M -DloggerPath=conf/log4j.properties"
 ags="generate -t modules/openapi-generator/src/main/resources/ruby-client -i modules/openapi-generator/src/test/resources/2_0/petstore-with-fake-endpoints-models-for-testing.yaml -g ruby -c bin/ruby-petstore.json -o samples/client/petstore/ruby $@"
 
 java $JAVA_OPTS -jar $executable $ags
